Fixing 8.3 filename for testmatrix.cpp, add using namespace std so it builds.

--- a/sources/unix/makefile
+++ b/sources/unix/makefile
@@ -284,7 +284,7 @@ $(BINDIR)/logtest: $(OBJDIR)/logtest.o $(OBJDIR)/audio.o $(OBJDIR)/g711.o
 
 testmatrix: $(BINDIR)/testmatrix
 
-$(BINDIR)/testmatrix: $(SRCDIR)/testmatrix.cpp
+$(BINDIR)/testmatrix: $(SRCDIR)/testmatr.cpp
 	$(CC) $(CFLAGS) -o $@ $> $(LIBS)
 
 ###########################################################################
